src/test/ui/issues/40000-49999/issue-49040.rs
#![allow(unused_variables)]; //~ ERROR expected item, found `;`
//~^ ERROR `main` function
fn foo() {}
